[package]
name = "dokan"
version = "0.3.1+dokan206"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
description = "Rust-friendly wrapper for Dokan (user mode file system library for Windows)"
homepage = "https://dokan-dev.github.io"
repository = "https://github.com/dokan-dev/dokan-rust"
documentation = "https://dokan-dev.github.io/dokan-rust-doc/html/dokan/"
keywords = ["dokan", "bindings", "driver", "filesystem"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "MIT"
edition = "2021"

[badges]
appveyor = { repository = "Liryna/dokan-rust" }

[dependencies]
bitflags = "2.5.0"
dokan-sys = { version = "0.3.1", path = "../dokan-sys" }
widestring = "0.4.3"
winapi = { version = "0.3.9", features = ["std", "errhandlingapi", "handleapi", "heapapi", "ioapiset", "minwinbase", "minwindef", "ntdef", "ntstatus", "processthreadsapi", "sddl", "securitybaseapi", "synchapi", "winbase", "winerror", "winnt"] }

[dev-dependencies]
clap = "4.5.4"
ctrlc = "3.4.4"
lazy_static = "1.4.0"
parking_lot = "0.12.2"
regex = "1.10.4"
winapi = { version = "0.3.9", features = ["processenv"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
