[package]
name = "dokan"
version = "0.3.1+dokan206"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
description = "Rust-friendly wrapper for Dokan (user mode file system library for Windows)"
homepage = "https://dokan-dev.github.io"
repository = "https://github.com/dokan-dev/dokan-rust"
documentation = "https://dokan-dev.github.io/dokan-rust-doc/html/dokan/"
keywords = ["dokan", "bindings", "driver", "filesystem"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "MIT"
edition = "2021"

[badges]
appveyor = { repository = "Liryna/dokan-rust" }

[dependencies]
bitflags = "2.5.0"
dokan-sys = { version = "0.3.1", path = "../dokan-sys" }
widestring = "0.5.1"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Storage",
    "Win32_Storage_FileSystem"
] }

[dev-dependencies]
clap = "4.5.4"
ctrlc = "3.4.4"
lazy_static = "1.4.0"
parking_lot = "0.12.2"
regex = "1.10.4"
windows-sys = { version = "0.52.0", features = [
    "Win32_Security_Authorization",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemServices",
] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
